--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: .
     volumes:
-      - .:/host_mnt/home/viktor/TaskManager:cached
+      - ./:/app:cached
       - ~/.ssh:/root/.ssh
       - ~/.bash_history:/root/.bash_history
     ports:
